Closed
Bug 1353939
Opened 8 years ago
Closed 8 years ago
slimerjs drag service creation fails
Categories
(Firefox :: General, defect)
Firefox
General
Tracking
()
RESOLVED
FIXED
Firefox 55
Tracking | Status | |
---|---|---|
firefox55 | --- | fixed |
People
(Reporter: bdahl, Assigned: bdahl)
References
(Regressed 1 open bug)
Details
Attachments
(1 file)
12.32 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
Some of the slimerjs tests trigger the drag service creation which calls into GTK and crashes.
Assignee | ||
Comment 1•8 years ago
|
||
When running some of the slimerjs unit tests I found some crashes when the drag service
was created. Further, when trying to create a test case I found some events
were not being propagated with windowless browsers so I also had to fix the HeadlessWidget.
Try Run (still waiting on one more retrigger, but probably okay):
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d2b7677bdc4ff90be20a084b06d6a4829c16ba97
Attachment #8855979 -
Flags: review?(jmuizelaar)
Updated•8 years ago
|
Attachment #8855979 -
Flags: review?(jmuizelaar) → review+
Pushed by bdahl@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a6134d4cc2e6
Disable drag service in headless mode. r=jrmuizel
Comment 3•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
You need to log in
before you can comment on or make changes to this bug.
Description
•