Bug 1353939 - Disable drag service in headless mode. r=jrmuizel

Drag service calls into GTK causing a crash in headless mode.